--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -112,53 +112,103 @@
                         </div>
                     </div>
                     <div class="col col-4">
-                        <div class="card-4">
-                            <div class="card">
-                                <div class="card__header">
-                                    <p><i class="fa-solid fa-user"></i>Singolo</p>
-                                </div>
-                                <div class="card__body">
-                                    <h3 class="title">Professional</h3>
-                                    <p class="price">€ 12.00</p>
-                                    <p class="rinnovo">/mese</p>
-                                    <ul>
-                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
-                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
-                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur natus provident exercitationem tempore soluta tenetur possimus iure culpa necessitatibus quia.</li>
-                                    </ul>
-                                    <a class="button button--w-100" href="#">Prova gratis per 30 giorni</a>
-                                    <p>oppure <a href="#">acquista ora</a></p>
-                                    <hr>
-                                    <h4>Punti salienti del piano</h4>
-                                    <ul>
-                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
-                                        <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
-                                    </ul>
-                                </div>
+                        <div class="card">
+                            <div class="card__header">
+                                <p>
+                                    <i class="fa-solid fa-users"></i>
+                                    Team
+                                </p>
+                            </div>
+                            <div class="card__body">
+                                <h3 class="card__title">Advanced</h3>
+                                <p class="card__price">€ 18.00</p>
+                                <p class="card__frequency">/utente/mese</p>
+                                <ul class="card__features">
+                                    <li class="feature">
+                                        <i class="fa-solid fa-user"></i>
+                                        3 o più utenti
+                                    </li>
+                                    <li class="feature">
+                                        <i class="fa-solid fa-folder"></i>
+                                        Tutto lo spazio di cui hai bisogno il tuo team
+                                    </li>
+                                    <li class="feature">
+                                        <i class="fa-solid fa-share-nodes"></i>
+                                        Sofisticate funzioni di controllo e per tenere al sicuro tutti i file del tuo team
+                                    </li>
+                                </ul>
+                                <a class="button--blue" href="#">Prova gratis per 30 giorni</a>
+                                <p>oppure <a class="card__link" href="#">acquista ora</a></p>
+                                <hr>
+                                <h4 class="card__subtitle">Punti salienti del piano</h4>
+                                <ul class="card__features">
+                                    <li class="feature">
+                                        <i class="fa-solid fa-check"></i>
+                                        Nessun limite di spazio per i file
+                                    </li>
+                                    <li class="feature">
+                                        <i class="fa-solid fa-check"></i>
+                                        Cartelle offline su dispositivi mobili
+                                    </li>
+                                    <li class="feature">
+                                        <i class="fa-solid fa-check"></i>
+                                        Risparmio del 50% rispetto alle iscrizioni singole
+                                    </li>
+                                    <li class="feature">
+                                        <i class="fa-solid fa-check"></i>
+                                        Possibilità di inserire nuovi membri del team
+                                    </li>
+                                    <li class="feature">
+                                        <i class="fa-solid fa-check"></i>
+                                        Gestione dei permessi in base ai ruoli
+                                    </li>
+                                </ul>
                             </div>
                         </div>
                     </div>
                     <div class="col col-4">
                         <div class="card">
                             <div class="card__header">
-                                <p><i class="fa-solid fa-user"></i>Singolo</p>
+                                <p>
+                                    <i class="fa-solid fa-building"></i>
+                                    Azienda
+                                </p>
                             </div>
                             <div class="card__body">
-                                <h3 class="title">Professional</h3>
-                                <p class="price">€ 12.00</p>
-                                <p class="rinnovo">/mese</p>
-                                <ul>
-                                    <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
-                                    <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
-                                    <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequatur natus provident exercitationem tempore soluta tenetur possimus iure culpa necessitatibus quia.</li>
+                                <h3 class="card__title">Enterprise</h3>
+                                <p class="card__price">Contattaci</p>
+                                <p class="card__frequency">-</p>
+                                <ul class="card__features">
+                                    <li class="feature">
+                                        <i class="fa-solid fa-user"></i>
+                                        10 o più utenti
+                                    </li>
+                                    <li class="feature">
+                                        <i class="fa-solid fa-folder"></i>
+                                        Soluzioni personalizzabili per la tua azienda
+                                    </li>
+                                    <li class="feature">
+                                        <i class="fa-solid fa-share-nodes"></i>
+                                        Assistenza personalizzata per aiutare gli amministratori in una gestione su larga scala
+                                    </li>
                                 </ul>
-                                <a class="button button--w-100" href="#">Prova gratis per 30 giorni</a>
-                                <p>oppure <a href="#">acquista ora</a></p>
+                                <a class="button--blue" href="#">Contattaci</a>
+                                <p>oppure <a class="card__link" href="#">acquista ora</a></p>
                                 <hr>
-                                <h4>Punti salienti del piano</h4>
-                                <ul>
-                                    <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet.</li>
-                                    <li><i class="fa-solid fa-user"></i>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit, quibusdam.</li>
+                                <h4 class="card__subtitle">Punti salienti del piano</h4>
+                                <ul class="card__features">
+                                    <li class="feature">
+                                        <i class="fa-solid fa-check"></i>
+                                        Cartelle offline su dispositivi mobili
+                                    </li>
+                                    <li class="feature">
+                                        <i class="fa-solid fa-check"></i>
+                                        Servizio assistenza 24/h
+                                    </li>
+                                    <li class="feature">
+                                        <i class="fa-solid fa-check"></i>
+                                        Possibilità di personalizzazione totale
+                                    </li>
                                 </ul>
                             </div>
                         </div>
